# serverless-fastapi

./: .gitignore  .pre-commit-config.yaml  Justfile  LICENSE.txt  README.md  settings.json
.github/workflows/: style.yml
docs/: Untitled Diagram.drawio
infrastructure/: .gitignore  MANIFEST.in  README.md  app.py  pyproject.toml  setup.cfg
infrastructure/src/cdk_minecraft/: __init__.py  backend_api.py  constants.py  frontend.py  stack.py
infrastructure/src/cdk_minecraft/deploy_server_batch_job/: __init__.py  deprovision_state_machine.py  job_definition.py  job_queue.py  provision_state_machine.py  server_backup_docker_image.py
infrastructure/src/cdk_minecraft/deploy_server_batch_job/state_machine_input_validator/: state_machine_input_validator_lambda.py
infrastructure/src/cdk_minecraft/deploy_server_batch_job/state_machine_input_validator/resources/: index.py
infrastructure/src/cdk_minecraft/resources/: __init__.py  awscdk-minecraft-server-deployer  minecraft-platform-backend-api  minecraft-platform-backup-service
infrastructure/src/fastapi_iac/: __init__.py  rest_api.py  stack.py
infrastructure/tests/: conftest.py  test_auth.py  test_example.py
linting/: .isort.cfg  .pydocstyle.cfg  .pylintrc
otel-playground/: README.md  log.py  requirements.txt  run-log.sh
rest-api/: Dockerfile  Justfile  docker-compose.yml  pyproject.toml  setup.cfg
rest-api/aws-lambda/: index.py  requirements.txt
rest-api/src/example_rest_api/: errors.py  main.py  middlewares.py  settings.py
rest-api/src/example_rest_api/aws/: cloudformation.py  s3.py  step_functions.py
rest-api/src/example_rest_api/routes/: __init__.py  aws_descriptor.py  docs.py  files.py  server_endpoints.py
rest-api/src/example_rest_api/schemas/: __init__.py  files.py  server_destroy_post.py  server_ip.py  server_start_post.py  server_status.py  services.py
rest-api/src/example_rest_api/services/: __init__.py  file_manager.py  minecraft_server_provisioner.py  service.py
rest-api/tests/: conftest.py
rest-api/tests/fixtures/: settings.py  state_machine.py
rest-api/tests/functional_tests/: __init__.py  test_descriptor_routes.py
rest-api/tests/unit_tests/: __init__.py
